<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">


    <LinearLayout
        style="@style/linearParent"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="LOGIN"
            android:textSize="25dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:layout_height="55dp"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/primaryTextColor"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="signInOrReg"
            android:text="Login" />

        <TextView
            android:id="@+id/registerTextView"
            style="@style/parent"
            android:layout_width="368dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="register"
            android:text="@string/login_signup_hint"
            android:textAlignment="viewStart"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />


    </LinearLayout>
</androidx.cardview.widget.CardView>